# CEX-Aggregator-Binance-OKX-Coinbase-

./: Cargo.toml  READEME.md  README.md
src/: main.rs  types.rs
src/api/: routes.rs
src/services/: aggregator.rs  binance.rs  coinbase.rs  mod.rs  okx.rs  rest.rs
